# fast-api

./: .gitignore  api_requests.http  database.py  main.py  pyproject.toml  seed.py
core/: __init__.py  auth.py  seciurity.py  settings.py
exceptions/: __init__.py  exceptions.py
models/: __init__.py  password_body.py  todo.py  user.py
routers/: __init__.py  admin.py  auth.py  todos.py  user_settings.py  users.py
schemas/: __init__.py  todo.py  user.py
services/: __init__.py  auth.py  todo_service.py  user_settings_service.py
